# shadowvault

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: BETA_RELEASE_CHECKLIST.md  BETA_ROLLBACK_RUNBOOK.md
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray_error.rgba  tray_normal.rgba  tray_paused.rgba
src-tauri/migrations/: 001_init.sql  002_backup_quality.sql  003_incremental.sql  004_cloud.sql  005_oauth.sql  006_vaults.sql  007_encryption.sql  008_indexes.sql  009_schema_versions.sql  010_block_backup.sql  011_backup_strategy.sql  012_level1_run_times.sql
src-tauri/src/: cli.rs  crypto_utils.rs  icons_gen.rs  lib.rs  main.rs  menu.rs  notifications.rs  tray.rs
src-tauri/src/commands/: backup_decrypt.rs  cloud.rs  config.rs  diagnostics.rs  error_contract.rs  fs.rs  jobs.rs  license.rs  logs.rs  mod.rs  notifications.rs  oauth.rs  preview.rs  restore.rs  settings.rs  sources.rs  updater.rs  vault.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/engine/: cloud_copier.rs  copier.rs  job_control.rs  mod.rs  oauth_copier.rs  oauth_token.rs  retry.rs  scheduler.rs  sftp_copier.rs  versioning.rs  watcher.rs  webdav_copier.rs
src-tauri/src/engine/block/: mod.rs  repository.rs  snapshot.rs  splitter.rs  store.rs
src-tauri/src/models/: log_entry.rs  mod.rs  schedule.rs  source.rs
src-tauri/src/vault/: crypto.rs  fs.rs  mod.rs  session.rs
src/api/: tauri.ts
src/components/destinations/: AddDestinationModal.module.css  AddDestinationModal.tsx  DestinationList.module.css  DestinationList.tsx  EditDestinationModal.tsx  PreviewModal.module.css  PreviewModal.tsx
src/components/layout/: Layout.module.css  Layout.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
src/components/logs/: LogPanel.module.css  LogPanel.tsx
src/components/schedule/: SchedulePicker.module.css  SchedulePicker.tsx
src/components/sources/: AddSourceModal.module.css  AddSourceModal.tsx  EditSourceModal.tsx  SourceCard.module.css  SourceCard.tsx  SourceList.module.css  SourceList.tsx
src/components/ui/: AboutModal.module.css  AboutModal.tsx  Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  ErrorFallback.module.css  ErrorFallback.tsx  Modal.module.css  Modal.tsx  OnboardingModal.module.css  OnboardingModal.tsx  Toggle.module.css  Toggle.tsx
src/components/vault/: CreateVaultModal.tsx  FileIcon.tsx  UnlockModal.tsx  VaultContextMenu.module.css  VaultContextMenu.tsx  VaultEntryColumns.module.css  VaultEntryColumns.tsx  VaultEntryGrid.module.css  VaultEntryGrid.tsx  VaultEntryList.module.css  VaultEntryList.tsx  VaultExplorer.module.css  VaultExplorer.tsx  VaultModal.module.css  VaultSidebar.module.css  VaultSidebar.tsx
src/i18n/: index.ts
src/pages/: Dashboard.module.css  Dashboard.tsx  License.module.css  License.tsx  LicensePage.module.css  LicensePage.tsx  Logs.module.css  Logs.tsx  Settings.module.css  Settings.tsx  Sources.module.css  Sources.tsx  VaultPage.module.css  VaultPage.tsx
src/store/: index.ts  types.ts
src/styles/: globals.css
src/test/: api.test.ts  license-key.test.ts  schedule.test.ts  setup.ts
src/utils/: commandError.ts  dateFormat.ts  licenseKey.ts
