[package]
name = "shadowvault"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadowvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1.3"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
uuid = { version = "1", features = ["v4", "v5"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
dashmap = "5"
walkdir = "2"
notify = "6"
sysinfo = "0.30"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
