[package]
name = "shadowvault"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "ShadowVault"
path = "src/main.rs"

[lib]
name = "shadowvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1.3"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
uuid = { version = "1", features = ["v4", "v5"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
dashmap = "5"
walkdir = "2"
notify = "6"
sysinfo = "0.30"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-notification = "2"
globset = "0.4"
object_store = { version = "0.10", features = ["aws"] }
bytes = "1"
futures-util = "0.3"
ssh2 = "0.9"
opendal = { version = "0.49", features = ["services-onedrive", "services-gdrive", "services-dropbox", "services-webdav"] }
rand = "0.8"
url = "2"
open = "5"
argon2 = "0.5"
hkdf = "0.12"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
hex = "0.4"
fastcdc = "3"
async-trait = "0.1"
specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
clap = { version = "4", features = ["derive"] }
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
